//apply plugin: 'com.android.library'
plugins {
    alias(libs.plugins.android.library)
    alias(libs.plugins.devtools.ksp)
    alias(libs.plugins.dagger.hilt)
}

android {
    compileSdk = libs.versions.compileSdkVersion.get() as Integer
    buildToolsVersion = libs.versions.buildTools.get()

    defaultConfig {
        minSdk = libs.versions.minSdkVersion.get() as Integer
        targetSdk = libs.versions.targetSdkVersion.get() as Integer
    }
    compileOptions {
        sourceCompatibility = JavaLanguageVersion.of(17)
        targetCompatibility = JavaLanguageVersion.of(17)
    }
    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    lint {
        abortOnError = true
    }
    namespace = 'musicmate.core'
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    //implementation project(':db-api')
    //implementation project(':server-api')

    implementation project(':library:JustFLAC')
    implementation project(':library:library')
    implementation project(':library:jaudiotagger-android')
    //implementation project(':library:justdsd')

    implementation libs.androidx.annotation
    implementation libs.androidx.core
    implementation libs.androidx.work
    implementation libs.androidx.preference

    implementation libs.rxandroid
    implementation libs.rxjava
    implementation libs.dagger.hilt.android
    ksp libs.dagger.hilt.compiler

    // OrmLite
    implementation libs.ormlite.android

    // network
   // implementation libs.netty.codec.http
    //implementation libs.io.undertow.core

    //others
    implementation libs.commons.codec
    implementation libs.commons.io
    implementation libs.commons.match3
    implementation libs.commons.text
    implementation libs.google.gson
    implementation libs.square.okhttp3
    implementation libs.anggrayudi.storage
    implementation libs.ffmpegkit.audio
    implementation libs.jsoup

    //implementation project(':library:justdsd')
    implementation project(':library:JustFLAC')
    implementation project(':library:library')
    implementation project(':library:jaudiotagger-android')
}
